chore(ci): add Codecov slug parameter for proper repo identification

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,5 +85,6 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          slug: brainz-lab/signal
           files: ./coverage/.resultset.json
           fail_ci_if_error: false
