--- a/config/database.yml
+++ b/config/database.yml
@@ -10,12 +10,38 @@ worker: &worker
   pool: <%= ENV.fetch("DB_POOL") { 10 } %>
 
 development:
-  <<: *default
-  url: <%= ENV.fetch("DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_development") %>
+  primary:
+    <<: *default
+    url: <%= ENV.fetch("DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_development") %>
+  queue:
+    <<: *worker
+    url: <%= ENV.fetch("DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_development") %>
+    migrations_paths: db/queue_migrate
+  cache:
+    <<: *default
+    url: <%= ENV.fetch("DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_development") %>
+    migrations_paths: db/cache_migrate
+  cable:
+    <<: *default
+    url: <%= ENV.fetch("DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_development") %>
+    migrations_paths: db/cable_migrate
 
 test:
-  <<: *default
-  url: <%= ENV.fetch("TEST_DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_test") %>
+  primary:
+    <<: *default
+    url: <%= ENV.fetch("TEST_DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_test") %>
+  queue:
+    <<: *worker
+    url: <%= ENV.fetch("TEST_DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_test") %>
+    migrations_paths: db/queue_migrate
+  cache:
+    <<: *default
+    url: <%= ENV.fetch("TEST_DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_test") %>
+    migrations_paths: db/cache_migrate
+  cable:
+    <<: *default
+    url: <%= ENV.fetch("TEST_DATABASE_URL", "postgres://postgres:postgres@localhost:5432/signal_test") %>
+    migrations_paths: db/cable_migrate
 
 production:
   primary: &primary_production
