Remove unused legacy JavaScript assets and manifest file

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,7 @@ brainzlab-ui
 
 # Brainzlab UI gem symlink (created by bin/dev)
 /app/assets/tailwind/brainzlab_ui
+
+# Compiled assets (rebuilt on deploy)
+/app/assets/builds/
+/public/assets/
