--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: registry.digitalocean.com
-  IMAGE_NAME: runmyprocess/signal
+  IMAGE_NAME: ${{ secrets.DO_REGISTRY }}/signal
 
 jobs:
   deploy:
